# Library

./: .bandit.yml  .coveragerc  .editorconfig  .eslintignore  .eslintrc.js  .flake8  .gitignore  .mega-linter.yml  .mypy.ini  LICENSE  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  readthedocs.yml  release.config.js  tsconfig.eslint.json
Runtime/safe-ds/: pyproject.toml
Runtime/safe-ds/demo/: demo_Sprint_2.py  demo_column_table.csv
Runtime/safe-ds/plotting/: __init__.py
Runtime/safe-ds/safe_ds/_util/: _util_sklearn.py
Runtime/safe-ds/safe_ds/classification/: __init__.py  _ada_boost.py  _decision_tree.py  _gradient_boosting_classification.py  _k_nearest_neighbors.py  _logistic_regression.py  _random_forest.py
Runtime/safe-ds/safe_ds/data/: __init__.py  _column.py  _column_type.py  _imputer.py  _label_encoder.py  _one_hot_encoder.py  _ordinal_encoder.py  _row.py  _supervised_dataset.py  _table.py  _tableSchema.py  _table_schema.py
Runtime/safe-ds/safe_ds/exceptions/: __init__.py  _data_exceptions.py  _learning_exceptions.py
Runtime/safe-ds/safe_ds/plotting/: __init__.py  _plot_boxplot.py  _plot_correlation_heatmap.py  _plot_histogram.py  _plot_lineplot.py  _plot_scatterplot.py
Runtime/safe-ds/safe_ds/regression/: __init__.py  _ada_boost.py  _decision_tree.py  _elastic_net_regression.py  _gradient_boosting_regression.py  _k_nearest_neighbors.py  _lasso_regression.py  _linear_regression.py  _random_forest.py  _ridge_regression.py
Runtime/safe-ds/safeds/_util/: _util_sklearn.py
Runtime/safe-ds/safeds/classification/: __init__.py  _ada_boost.py  _decision_tree.py  _gradient_boosting_classification.py  _k_nearest_neighbors.py  _logistic_regression.py  _random_forest.py
Runtime/safe-ds/safeds/data/: __init__.py  _column.py  _imputer.py  _label_encoder.py  _one_hot_encoder.py  _ordinal_encoder.py  _row.py  _supervised_dataset.py  _table.py  _table_schema.py
Runtime/safe-ds/safeds/exceptions/: __init__.py  _data_exceptions.py
Runtime/safe-ds/safeds/plotting/: _correlation_heatmap.py  _lineplot.py  _plot_boxplot.py  _plot_correlation_heatmap.py  _plot_histogram.py  _plot_lineplot.py  _plot_scatterplot.py
Runtime/safe-ds/safeds/regression/: _ada_boost.py  _decision_tree.py  _elastic_net_regression.py  _gradient_boosting_regression.py  _k_nearest_neighbors.py  _lasso_regression.py  _linear_regression.py  _random_forest.py  _ridge_regression.py
Runtime/safe-ds/tests/classification/: test_logistic_regression.py
Runtime/safe-ds/tests/data/: test_schema.py  test_supervised_dataset.py  test_table.py
Runtime/safe-ds/tests/demo/: demo_Sprint_2.py
Runtime/safe-ds/tests/regression/: test_linear_regression.py
Runtime/safe-ds/tests/resources/: test_decision_tree_invalid_target_predictions.csv  test_row_table.csv  test_table.csv  test_table_add_column_valid_output.csv  test_table_replace_column_output_different_name.csv  test_table_transform_column.csv
src/: README.md  pyproject.toml
src/resources/: from_csv_file.csv  from_excel_file.xlsx  from_json_file.json  from_json_file_2.json  to_csv_file.csv  to_excel_file.xlsx  to_json_file.json  to_json_file_2.json  to_parquet_file.parquet
src/safeds/: __init__.py
src/safeds/_config/: __init__.py  _device.py  _polars.py  _torch.py
src/safeds/_typing/: __init__.py
src/safeds/_utils/: __init__.py  _collections.py  _file_io.py  _hashing.py  _lazy.py  _plotting.py  _random.py  _string.py
src/safeds/_validation/: __init__.py  _check_bounds.py  _check_bounds_module.py  _check_column_has_no_missing_values.py  _check_column_is_numeric.py  _check_column_is_numeric_module.py  _check_columns_are_numeric.py  _check_columns_dont_exist.py  _check_columns_dont_exist_module.py  _check_columns_exist.py  _check_columns_exist_module.py  _check_indices_module.py  _check_row_counts_are_equal.py  _check_row_counts_are_equal_module.py  _check_schema.py  _check_schema_module.py  _check_time_zone_module.py  _convert_and_check_datetime_format_module.py  _normalize_and_check_file_path.py  _normalize_and_check_file_path_module.py
src/safeds/config/: __init__.py  _device.py
src/safeds/data/: __init__.py  _supervised_dataset.py  _tagged_table.py
src/safeds/data/image/: __init__.py
src/safeds/data/labeled/: __init__.py
src/safeds/data/tabular/: __init__.py  _column.py  _row.py  _table.py  _tagged_table.py
src/safeds/exceptions/: __init__.py  _column_not_found_error.py  _data.py  _data_exceptions.py  _generic.py  _learning_exceptions.py  _ml.py  _ml_exceptions.py  _out_of_bounds_error.py
src/safeds/ml/: __init__.py  _util_sklearn.py
src/safeds/ml/classical/: __init__.py  _supervised_model.py  _util_sklearn.py
src/safeds/ml/classification/: __init__.py  _ada_boost.py  _classifier.py  _decision_tree.py  _gradient_boosting_classification.py  _k_nearest_neighbors.py  _logistic_regression.py  _random_forest.py
src/safeds/ml/exceptions/: __init__.py  _exceptions.py
src/safeds/ml/hyperparameters/: __init__.py  _choice.py
src/safeds/ml/metrics/: __init__.py  _classification_metrics.py  _classifier_metric.py  _regression_metrics.py  _regressor_metric.py
src/safeds/ml/nn/: _LSTM_layer.py  __init__.py  _cnn_layer.py  _convolutional2d_layer.py  _dataloader.py  _flatten_layer.py  _fnn_layer.py  _fnnlayer.py  _forward_layer.py  _input_conversion.py  _input_conversion_image.py  _input_conversion_table.py  _input_conversion_time_series.py  _internal_model.py  _layer.py  _lstm_layer.py  _model.py  _output_conversion.py  _output_conversion_image.py  _output_conversion_table.py  _output_conversion_time_series.py  _pooling2d_layer.py  _rnn_layer.py  _util_dataloader.py
src/safeds/ml/regression/: __init__.py  _ada_boost.py  _decision_tree.py  _elastic_net_regression.py  _gradient_boosting_regression.py  _k_nearest_neighbors.py  _lasso_regression.py  _regressor.py  (+3 more)
src/safeds/plotting/: __init__.py  _boxplot.py  _correlation_heatmap.py  _histogram.py  _lineplot.py  _scatterplot.py
src/src/resources/: to_parquet_file.parquet
src/tests/resources/: test_ada_boost_invalid.csv  test_table_transform_column_output.csv
(+1380 files in other folders)
