[tool.poetry]
name = "safe-ds"
version = "0.23.0"
description = "A user-friendly library for Data Science in Python."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
readme = ".github/README.md"
repository = "https://github.com/Safe-DS/Library"
documentation = "https://library.safeds.com"
keywords = ["data-science", "machine-learning", "usability", "learnability"]
packages = [
    { include = "safeds", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
apipkg = "^3.0.2"
levenshtein = ">=0.21.1,<0.26.0"
matplotlib = "^3.6.3"
openpyxl = "^3.1.2"
pandas = "^2.0.0"
pillow = ">=9.5,<11.0"
scikit-learn = "^1.2.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
xxhash = "^3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1,<9.0.0"
pytest-cov = ">=4,<6"
syrupy = "^4.6.0"
torch = [
    # Install the CUDA version on Windows. Projects that depend on us always get their dependencies from PyPI, so
    # there's no point moving this to the main dependencies section.
    { version = "^2.3.0", markers="sys_platform == 'win32'", source = "torch_cuda121" },
]
torchvision = [
    # Install the CUDA version on Windows. Projects that depend on us always get their dependencies from PyPI, so
    # there's no point moving this to the main dependencies section.
    { version = "^0.18.0", markers="sys_platform == 'win32'", source = "torch_cuda121" },
]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = ">=0.20,<0.26"
mkdocstrings-python = ">=0.8.3,<1.11.0"
mkdocs-autorefs = ">=0.4.1,<1.1.0"
mkdocs-exclude = "^1.0.2"
mkdocs-gen-files = ">=0.4,<0.6"
mkdocs-glightbox = "^0.3.1"
mkdocs-jupyter = ">=0.23,<0.25"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.1.2"
mkdocs-section-index = "^0.3.5"

[[tool.poetry.source]]
name = "torch_cuda121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused"
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources.declare_namespace",
    "ignore:Jupyter is migrating its paths to use standard platformdirs"
]

[tool.black]
line-length = 120
