[tool.poetry]
name = "safe-ds"
version = "0.2.0"
description = "A user-friendly library for Data Science in Python."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Safe-DS/Stdlib"
documentation = "https://safe-ds-stdlib.readthedocs.io"
keywords = ["data science", "machine learning", "usability", "learnability"]
packages = [
    { include = "safeds" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"
ipython = "^8.8.0"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
