[tool.poetry]
name = "safe-ds"
version = "1.0.0"
description = "The Safe-DS standard library."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped-calls = true
disallow_untyped-defs = true
disallow_incomplete-defs = true
disallow_untyped-decorators = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
