[tool.poetry]
name = "safe-ds"
version = "1.0.0"
description = "The Safe-DS standard library."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
